# proc_suite_deploy

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_phi_vault_tables.py  a4b5c6d7e8f0_add_registry_case_records_table.py  b4c5d6e7f8a9_add_review_status_and_feedback_fields.py  c1d2e3f4a5b6_add_registry_runs_table.py  c5d6e7f8a9b0_add_case_event_metadata_and_manual_overrides.py  d7e8f9a0b1c2_add_user_vault_tables.py  e8f9a0b1c2d3_add_registry_appended_documents.py  f9a1b2c3d4e5_add_append_event_type_and_offset.py
app/: __init__.py
app/agents/: __init__.py  contracts.py  run_pipeline.py
app/api/: __init__.py  auth.py  bootstrap.py  coder_adapter.py  dependencies.py  fastapi_app.py  gemini_client.py  guards.py  ml_advisor_router.py  normalization.py  phi_demo_store.py  phi_dependencies.py  phi_redaction.py  readiness.py  registry_payload.py  routes_registry.py
app/coder/: __init__.py  cli.py  code_families.py  constants.py  dictionary.py  ebus_extractor.py  ebus_rules.py  ncci.py  peripheral_extractor.py  peripheral_rules.py  phi_gating.py  posthoc.py  rules.py  rules_engine.py  schema.py  sectionizer.py  types.py
app/common/: __init__.py  exceptions.py  knowledge.py  knowledge_cli.py  knowledge_schema.py  llm.py  logger.py  model_capabilities.py  openai_responses.py  path_redaction.py  quality_eval.py  quality_gate_reports.py  reporter_seed_eval.py  rvu_calc.py  sectionizer.py  spans.py  text_cleaning.py  text_io.py  umls_linking.py
app/document_fingerprint/: __init__.py  endosoft.py  provation.py  registry.py
app/evidence/: __init__.py  quote_anchor.py
app/extraction/: __init__.py
app/infra/: __init__.py  cache.py  executors.py  llm_control.py  nlp_warmup.py  perf.py  safe_logging.py  settings.py
app/llm/: __init__.py  client.py
app/ner/: __init__.py  entity_types.py  inference.py
app/phi/: README.md  __init__.py  db.py  models.py  ports.py  service.py
app/registry/: __init__.py  (+22 more)
config/: settings.py  startup_settings.py
configs/: __init__.py
observability/: __init__.py  coding_metrics.py  logging_config.py  metrics.py  timing.py
ops/: devserver.sh  preflight.py  railway_start.sh  railway_start_gunicorn.sh  warm_models.py
proc_kb/: ebus_config.yaml
proc_nlp/: __init__.py  normalize_proc.py  umls_linker.py  umls_lite.py
proc_schemas/: __init__.py  billing.py  coding.py  envelope_models.py  procedure_report.py  reasoning.py
schemas/: IP_Registry.json
(+734 files in other folders)
